// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render Card of caught pokemon 1`] = `
<li
  className="list__card card card--caught"
  onClick={[Function]}
>
  <a
    className="card__link-wrap"
    href="/detail/2"
    onClick={[Function]}
  >
    <img
      alt="Ivysaur"
      className="card__img"
      src="test-file-stub"
    />
    <h2
      className="card__title"
    >
      Ivysaur
    </h2>
  </a>
  <button
    className="card__button button button--checked"
    onClick={[Function]}
    type="button"
  >
    Release
  </button>
</li>
`;

exports[`Render Card of uncaught pokemon 1`] = `
<li
  className="list__card card"
  onClick={[Function]}
>
  <a
    className="card__link-wrap"
    href="/detail/1"
    onClick={[Function]}
  >
    <img
      alt="Bulbasaur"
      className="card__img"
      src="test-file-stub"
    />
    <h2
      className="card__title"
    >
      Bulbasaur
    </h2>
  </a>
  <button
    className="card__button button"
    onClick={[Function]}
    type="button"
  >
    Catch!
  </button>
</li>
`;
